--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     "react-dom/client": "https://esm.sh/react-dom@18.3.1/client",
     "lucide-react": "https://esm.sh/lucide-react@0.400.0",
     "recharts": "https://esm.sh/recharts@2.12.7",
+    "recharts/": "https://esm.sh/recharts@2.12.7/",
     "react-dom/": "https://esm.sh/react-dom@^19.1.0/",
     "react/": "https://esm.sh/react@^19.1.0/"
   }
